holy grail added

--- a/week2/holygrail.html
+++ b/week2/holygrail.html
@@ -31,7 +31,7 @@
             <img src="https://www.thechurchnews.com/temples/2024/09/09/san-pedro-sula-honduras-temple-opens-for-september-9-media-day-public-tours/" alt="San Pedro Sula Honduras Temple Celestial Room" width="200"> 
         </aside>
         <footer>
-            🎸 Josue Ocampo
+            Josue Ocampo
         </footer>
     </body>
 </html>
