holy grail added

--- a/week2/holygrail.html
+++ b/week2/holygrail.html
@@ -23,12 +23,12 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, sapiente!</p>
             </section>
             <section>
-                <h2>Heading</h2>
+                <h2>Sub Heading</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
             </section>
         </main>
         <aside>
-            <img src="https://www.thechurchnews.com/temples/2024/09/09/san-pedro-sula-honduras-temple-opens-for-september-9-media-day-public-tours/" alt="San Pedro Sula Honduras Temple Celestial Room" width="200"> 
+            <img src="https://es.thechurchnews.com/resizer/tuaSQhi88Qh1xR27HHxTWp1tlJk=/arc-photo-deseretnews/arc2-prod/public/Z6OIOEH64JGOHAPM2OI3AGKW6M.jpeg" alt="San Pedro Sula Honduras Temple " width="200"> 
         </aside>
         <footer>
             Josue Ocampo
