--- a/week2/holygrail.html
+++ b/week2/holygrail.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Josue Ocampo | Holy Grail Layout Example</title>
-        <meta name="description" content="A common layout on the web called the 'holy grail'">
-        <meta name="author" content="Josue Ocampo">
-    </head>
-    <body>
-        <header>
-            <h1>A Holy Grail Layout Example</h1>
-        </header>
-        <nav>
-            <u1>
-                <li><a href="https://byu.edu">BYU-Provo</a></l1>
-                <li><a href="https://familysearch.org/">Family Search</a></li>
-            </u1>
-        </nav>
-        <main>
-            <section>
-                <h2>Heading</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, sapiente!</p>
-            </section>
-            <section>
-                <h2>Sub Heading</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            </section>
-        </main>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Josue Ocampo | Holy Grail Layout Example.</title>
+    <meta name="description" content="A common layout example on the web called the 'holy grail' layout.">
+    <meta name="Author" content="Josue Ocampo">
+</head>
+<body>
+    <header>
+        <h1>A Holy Grail Layout Example</h1>
+    </header>
+    <nav>
+        <u1>
+            <li><a href="https://www.byu.edu/">BYU-Provo</a></li>
+            <li><a href="https://www.familysearch.org/es/">Family-Search</a></li>
+        </u1>
+    </nav>
+    <main>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, omnis.</p>
+            <h2>Sub-Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+        </section>
         <aside>
-            <img src="https://es.thechurchnews.com/resizer/tuaSQhi88Qh1xR27HHxTWp1tlJk=/arc-photo-deseretnews/arc2-prod/public/Z6OIOEH64JGOHAPM2OI3AGKW6M.jpeg" alt="San Pedro Sula Honduras Temple " width="200"> 
+            <img src="https://cloudfront-us-east-1.images.arcpublishing.com/deseretnews/KLVWXFHB6FEW3CXFBDV3RF6YU4.JPG" alt="San Pedro Sula Honduras Temple" width="200">
         </aside>
         <footer>
             Josue Ocampo
         </footer>
-    </body>
+    </main>
+</body>
 </html>
