--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <h1>Josue Ocampo | WDD130</h1>
-            <img src="images/profile.jpeg" alt="Hello, my name is Josue Ocampo" width="200">
+            <img src="images/profile.png" alt="Hello, my name is Josue Ocampo" width="200">
             <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. I enjoy music.</p>
         </main>
         <aside>
