--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Josue Ocampo | WDD 130</title>
-        <meta name="description" content="My name is Josue Ocampo. This site is a test for the WDD130 class.">
-        <meta name="author" content="Josue Ocampo"> 
-
-        <link rel="stylesheet" href="styles/styles.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Josue Ocampo | WDD130</h1>
-            <img src="images/profile.jpeg" alt="Hello, my name is Josue Ocampo" width="200">
-            <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. I enjoy music.</p>
-        </main>
-        <aside>
-            <h2>HONDURAS</h2>
-            <img src="https://cdn.fazwaz.com/nw/GODXQwRKHsbMbzyrGdUr8z9xco8/450x300/location/19762/san-pedro-sula.jpg" alt="San Pedro Sula Honduras">
-            <p>San Pedro Sula is the Industrial Capital of Honduras and the second most important city in the country</p>
-        </aside>
-        <footer>
-            <p>©️ 2025 🎸 Josue Ocampo 🎸 San Pedro Sula, Honduras</p>    
-        </footer>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Josue Ocampo | WDD 130</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Josue Ocampo | WDD 130</h1>
+        <img scr="images/profile.jpg" alt="Hello, my name is Josue Ocampo" width="200">
+        <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. I enjoy playing music</p> 
+    </main>
+    <footer>
+        <p>©️ 2025 Josue Ocampo Honduras</p>
+    </footer>
+</body>
 </html>
