--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
     </header>
     <main>
         <h1>Josue Ocampo | WDD 130</h1>
-        <img scr="images/profile.jpg" alt="Hello, my name is Josue Ocampo" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Josue Ocampo" width="200">
         <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. I enjoy playing music</p> 
     </main>
     <footer>
