holy grail added changes

--- a/week2/holygrail.html
+++ b/week2/holygrail.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josue Ocampo | Holy Grail Layout Example.</title>
-    <meta name="description" content="A common layout example on the web called the 'holy grail' layout.">
-    <meta name="Author" content="Josue Ocampo">
+    <title>Josue Ocampo | Example Holy Grail Layout</title>
+    <meta name="description" content="A common layout of the site called 'holy grail'">
+    <meta name="author" content="Josue Ocampo">
 </head>
 <body>
     <header>
         <h1>A Holy Grail Layout Example</h1>
     </header>
     <nav>
-        <u1>
-            <li><a href="https://www.byu.edu/">BYU-Provo</a></li>
-            <li><a href="https://www.familysearch.org/es/">Family-Search</a></li>
-        </u1>
+        <ul>
+            <li><a href="byu.edu">Byu Provo</a></li>
+            <li><a href="familysearch.org">Family Search</a></li>
+        </ul>
     </nav>
     <main>
         <section>
             <h2>Heading</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, omnis.</p>
-            <h2>Sub-Heading</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, illo.</p>
+            <h2>Sub Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </section>
-        <aside>
-            <img src="https://cloudfront-us-east-1.images.arcpublishing.com/deseretnews/KLVWXFHB6FEW3CXFBDV3RF6YU4.JPG" alt="San Pedro Sula Honduras Temple" width="200">
-        </aside>
-        <footer>
-            Josue Ocampo
-        </footer>
     </main>
+    <aside>
+        <img src="https://www.churchofjesuschrist.org/imgs/Usqhjku9xyRSHqRwNaqaXs8ONHRjxnruvehdhtcp/full/800%2C/0/default" alt="San Pedro Sula, Honduras Temple" width="200">
+    </aside>
+    <footer>
+        Josue Ocampo
+    </footer>
 </body>
 </html>
