--- a/week2/holygrail.html
+++ b/week2/holygrail.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!--A header specifying the name of the website-->
         <h1>A Holy Grail Layout Example</h1>
     </header>
     <nav>
