--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josue Ocampo | WDD 130</title>
+    <meta name="description" content="Josue Ocampo | WDD130 | This is a testing home page">
+    <meta name="author" content="Josue Ocampo">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,6 +20,11 @@
         <img src="images/profile.jpg" alt="Hello, my name is Josue Ocampo" width="200">
         <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. I enjoy playing music</p> 
     </main>
+    <aside>
+        <h2>Honduras</h2>
+        <img src="images/san-pedro-sula.webp" alt="San Pedro Sula, Honduras">
+        <p>San Pedro Sula is the Industrial Capital of Honduras and the second most important city in the country</p>
+    </aside>
     <footer>
         <p>©️ 2025 Josue Ocampo Honduras</p>
     </footer>
