index changes added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josue Ocampo | WDD 130</title>
-    <meta name="description" content="Josue Ocampo | WDD130 | This is a testing home page">
+    <meta name="description" content="Josue Ocampo's WDD130 testing home page">
     <meta name="author" content="Josue Ocampo">
+    
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
