index changes added

--- a/index.html
+++ b/index.html
@@ -14,14 +14,27 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="linkedln.com">linkedln</a>
+            <a href="facebook.com">facebook</a>a>
         </nav>
     </header>
     <main>
         <h1>Josue Ocampo | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Josue Ocampo" width="200">
-        <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. I enjoy playing music</p> 
+        <p>Hello! My name is Josue Ocampo and I am from San Pedro Sula, Honduras. 
+           I enjoy playing music, travel with my family to see place around the world
+           and on my country. I currently teach music at a Bilingual institution here 
+           in Honduras but I am also interested in learning web desing and programming. 
+           I served as a missionary in Guatemala City-South mission from 1997 through 1999.
+           I am happily married and have four children, one of them is getting ready to 
+           serve a mission.</p> 
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=spa" target="_blank">Guatemala City Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=spa" target="_blank">San Diego California Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple?lang=spa" target="_blank">Roma Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Honduras</h2>
         <img src="images/san-pedro-sula.webp" alt="San Pedro Sula, Honduras">
         <p>San Pedro Sula is the Industrial Capital of Honduras and the second most important city in the country</p>
@@ -30,4 +43,5 @@
         <p>©️ 2025 Josue Ocampo Honduras</p>
     </footer>
 </body>
+<!--Last modified on Wednesday, January 22nd 2024-->
 </html>
