--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="linkedln.com">linkedln</a>
-            <a href="facebook.com">facebook</a>a>
+            <a href="facebook.com">facebook</a>
         </nav>
     </header>
     <main>
