--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,12 +40,23 @@
             <img src="images/rafting19_600 small.jpg" alt="Rafting-red">
             <img src="images/rafting-banner small.jpg" alt="Rafting-blue">
             <img src="images/rafting59_600.jpg" alt="Rafting-yellow">
-            <img src="images/..." alt="...">
-            <img src="images/..." alt="...">
+            <img src="images/rafting29_600 small.jpg" alt="Rafting-fast">
+            <img src="images/rafting17_600 small.jpg" alt="Rafting-fun">
         </section>
     </main>
     <footer>
         <p>©️ 2025 | Whitewhater Rafting | Josue Ocampo</p>
+        <nav class="sociallinks">
+            <a href="facebook.com">
+                <img src="images/2018_social_media_popular_app_logo_facebook-64.webp" alt="Facebook">
+            </a>
+            <a href="twitter.com">
+                <img src="images/x-logo-twitter-new-brand-64.webp" alt="Twitter">
+            </a>
+            <a href="instagram.com">
+                <img src="images/1_Instagram_colored_svg_1-64.webp" alt="Instagram">
+            </a>
+        </nav>
     </footer>
 </body>
 </html>
